(STRETCH) (BUG FIX) : fixed images bottom in index.html styles

--- a/css/index.css
+++ b/css/index.css
@@ -437,7 +437,7 @@ header .close-button:hover {
 }
 @media (max-width: 400px) {
   .bottom-content img {
-    width: 90%;
+    width: 320px;
   }
 }
 .bottom-content h2 {
@@ -451,8 +451,8 @@ header .close-button:hover {
 }
 @media (max-width: 400px) {
   .bottom-content .gray-header-and-img-container {
-    width: 400px;
-    right: 15px;
+    width: 100%;
+    margin-left: 2%;
   }
 }
 .bottom-content .gray-header-and-img-container h3 {
@@ -471,9 +471,9 @@ header .close-button:hover {
 }
 @media (max-width: 400px) {
   .bottom-content .gray-header-and-img-container h3 {
-    left: -10%;
+    left: 0;
     bottom: -50px;
-    width: 290px;
+    width: 320px;
     margin: 0 auto;
   }
 }
@@ -496,9 +496,8 @@ header .close-button:hover {
 }
 @media (max-width: 400px) {
   .bottom-content .left-box h3 {
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
-    left: -10%;
   }
 }
 .jumbotron-services {
@@ -1051,11 +1050,13 @@ footer {
   font-size: 1.3rem;
   font-weight: 400;
   line-height: 2.6rem;
+  width: 100%;
 }
 @media (max-width: 400px) {
   footer {
+    box-sizing: border-box;
     margin: 0 auto;
-    padding: 50px 0 20px 0;
+    padding: 40px 0 10px 0;
     width: 100%;
   }
 }
@@ -1078,6 +1079,7 @@ footer .form-and-loc-container {
 @media (max-width: 400px) {
   footer .form-and-loc-container {
     height: 100%;
+    width: 90%;
     flex-direction: column;
   }
 }
@@ -1093,7 +1095,7 @@ footer .form-and-loc-container .form-container {
   }
 }
 footer .form-and-loc-container .form-container form input {
-  width: 100%;
+  width: 90%;
   height: 40px;
   border: none;
   margin-bottom: 10px;
@@ -1115,8 +1117,8 @@ footer .form-and-loc-container .location-container {
 @media (max-width: 400px) {
   footer .form-and-loc-container .location-container {
     flex-direction: column;
-    width: 90%;
-    margin-left: 14px;
+    width: 100%;
+    padding-left: 14px;
   }
   footer .form-and-loc-container .location-container .location {
     margin-bottom: 30px;
