--- a/less/footer.less
+++ b/less/footer.less
@@ -4,10 +4,12 @@ footer {
   padding: 70px 80px 20px 80px;
   flex-direction: column;
   .footer-txt;
+  width: 100%;
 
   @media (max-width: 400px) {
+    box-sizing: border-box;
     margin: 0 auto;
-    padding: 50px 0 20px 0;
+    padding: 40px 0 10px 0;
     width: 100%;
   }
 
@@ -27,6 +29,7 @@ footer {
 
     @media (max-width: 400px) {
       height: 100%;
+      width: 90%;
       flex-direction: column;
     }
 
@@ -39,7 +42,7 @@ footer {
         margin: 0 14px 25px 14px;
       }
       form input {
-        width: 100%;
+        width: 90%;
         height: 40px;
         border: none;
         margin-bottom: 10px;
@@ -61,8 +64,8 @@ footer {
 
       @media (max-width: 400px) {
         flex-direction: column;
-        width: 90%;
-        margin-left: 14px;
+        width: 100%;
+        padding-left: 14px;
 
         .location {
           margin-bottom: 30px;
@@ -70,12 +73,12 @@ footer {
       }
     }
   }
-      .copyright {
-        text-align: center;
-  
-        @media (max-width: 400px) {
-          text-align: left;
-          padding-left: 14px;
-        }
-      }
+  .copyright {
+    text-align: center;
+
+    @media (max-width: 400px) {
+      text-align: left;
+      padding-left: 14px;
+    }
+  }
 }
