--- a/less/home.less
+++ b/less/home.less
@@ -129,7 +129,7 @@
   img {
     width: 100%;
     @media (max-width: 400px) {
-      width: 90%;
+      width: 320px;
     }
   }
   h2 {
@@ -141,8 +141,8 @@
     position: relative;
 
     @media (max-width: 400px) {
-      width: 400px;
-      right: 15px;
+      width: 100%;
+      margin-left: 2%;
     }
   }
 
@@ -153,9 +153,9 @@
     bottom: -30px;
 
     @media (max-width: 400px) {
-      left: -10%;
+      left: 0;
       bottom: -50px;
-      width: 290px;
+      width: 320px;
       margin: 0 auto;
     }
   }
@@ -180,9 +180,8 @@
       bottom: -30px;
 
       @media (max-width: 400px) {
-        width: 80%;
+        width: 100%;
         margin: 0 auto;
-        left: -10%;
       }
     }
   }
